--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>Simon</title>
     <link rel="stylesheet" href="styles.css" />
     <link
@@ -11,7 +14,7 @@
   </head>
 
   <body>
-    <h1 id="level-title">Press A Key to Start</h1>
+    <h1 id="level-title">Press Any Key or Touch Screen to Start</h1>
     <div class="container">
       <div class="row">
         <div type="button" id="green" class="btn green"></div>
