--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               /></svg
           ></a>
           <a
-            href="https://x.com/hunchoola?s=09"
+            href="https://www.threads.net/@akanniola410"
             target="_blank"
             class="footer-link"
             ><svg
